workout-log-rails/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout
spec:
  selector:
    matchLabels:
      app: workout
  replicas: 1
  template:
    metadata:
      labels:
        app: workout
    spec:
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      imagePullPolicy: IfNotPresent 
      nodeName: vegeta
      containers:
      - name: workout
        image: workout:latest
        imagePullPolicy: IfNotPresent 
        livenessProbe:
         httpGet:
           path: /
           port: 3000
        resources:
          requests:
            memory: 256Mi
        ports:
        - containerPort: 3000
          name: rails-dev
