workout-log-rails/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: workout
  type: ClusterIP
